# $Id$

2007-01-05	Konstantin V. Arkhipov

	* meta/: ValueObject pattern implemented, as requested by Antony;
	unused hints support dropped.

2007-01-03	Konstantin V. Arkhipov

	* meta/classes/MetaClassProperty.class.php: removed evil hack for
	MySQL's booleans.

	* meta/builders/SchemaBuilder.class.php: ManyToMany relations building
	implemented.

	* ext/src/core/DB/Dialect.c: rare memory corruption fixed.

2007-01-02	Konstantin V. Arkhipov

	* meta/builders/AutoClassBuilder.class.php: added method for filling
	encapsulated containers.

	* meta/builders/ContainerClassBuilder.class.php: no more
	getChildIdField() for OneToMany containers.

	* main/Criteria/Criteria.class.php: collection's fetching implemented.

	* main/DAOs/StorableDAO.class.php: path's digging simplified a bit.

2006-12-30	Konstantin V. Arkhipov

	* meta/, main/Criteria/Criteria.class.php: correct handling of
	self-encapsulating classes implemented.

	* main/Criteria/Criteria.class.php: cascading fetch-strategy is
	working again.

	* main/Containers/Unified/ManyToManyLinkedFull.class.php,
	main/Containers/Unified/ManyToManyLinkedLazy.class.php: removed
	distinct clause from fetch queries.

	* core/Criteria/: moved to main/.

	* core/DB/PostgresDialect.class.php: do-not-quote-integer's logic
	resurrected.

	* core/OSQL/GroupBy.class.php: re-introduced one more time.

2006-12-29	Konstantin V. Arkhipov

	* main/Flow/HttpRequest.class.php: get*Var() and has*Var() added;
	hasAttached() removed in favour of hasAttachedVar().

	* core/Cache/WatermarkedPeer.class.php: evil typo spotted and fixed.

	* core/Criteria/Projections: several simple object projections added
	for usage in Criteria.

	* main/Base/LightMetaProperty.class.php: light version of
	MetaClassProperty for usage in userspace.

	* core/Criteria/Criteria.class.php: distinct support added.

	* main/DAOs/StorableDAO.class.php: correct support for OneToMany
	relations implemented in property's path digging.

2006-12-27	Konstantin V. Arkhipov
