@@ -1,85 +1,0 @@
-<?php
-/***************************************************************************
- *   Copyright (C) 2004-2005 by Konstantin V. Arkhipov                     *
- *                                                                         *
- *   This program is free software; you can redistribute it and/or modify  *
- *   it under the terms of the GNU General Public License as published by  *
- *   the Free Software Foundation; either version 2 of the License, or     *
- *   (at your option) any later version.                                   *
- *                                                                         *
- ***************************************************************************/
-/* $Id$ */
-
-	/**
-	 * System-wide factory with predefined DB instance.
-	 * 
-	 * @ingroup DB
-	**/
-	final class DBFactory extends StaticFactory
-	{
-		private static $defaultDB = null;
-		
-		/**
-		 * @throws WrongArgumentException
-		**/
-		public static function setDefaultInstance(DB $db)
-		{
-			Assert::isTrue($db->isConnected());
-			
-			self::$defaultDB = $db;
-		}
-	
-		/**
-		 * @return DB
-		**/
-		public static function &getDefaultInstance()
-		{
-			if (self::$defaultDB === null)
-				DBFactory::connect();
-			
-			return self::$defaultDB;
-		}
-
-		/**
-		 * @return DB
-		**/
-		public static function getCustomInstance(
-			$userName, $passWord, $host, $base = null, $connector = null
-		)
-		{
-			if (!$connector) {
-				if (!defined('DB_CLASS'))
-					throw new WrongStateException(
-						'you should define DB_CLASS in your config file'
-					);
-				
-				$connector = DB_CLASS;
-			}
-
-			$db = new $connector;
-			$db->connect($userName, $passWord, $host, $base);
-
-			if (defined('DEFAULT_ENCODING')) {
-				try {
-					$db->setEncoding(DEFAULT_ENCODING);
-				} catch (UnsupportedMethodException $ume) {/*_*/}
-			}
-
-			return $db;
-		}
-		
-		private static function connect()
-		{
-			if (!self::$defaultDB)
-				self::$defaultDB = 
-					DBFactory::getCustomInstance(
-						DB_USER,
-						DB_PASS,
-						DB_HOST,
-						DB_BASE
-					);
-			
-			return DBFactory::$defaultDB;
-		}
-	}
-?>
