@@ -1,7 +1,7 @@
 <?php
 /*****************************************************************************
- *   Copyright (C) 2006, onPHP's MetaConfiguration Builder.                  *
- *   Generated by onPHP-0.4.3.99 at 2006-05-07 19:37:11                      *
+ *   Copyright (C) 2006-2007, onPHP's MetaConfiguration Builder.             *
+ *   Generated by onPHP-0.9.42 at 2007-01-06 02:29:45                        *
  *   This file is autogenerated - do not edit.                               *
  *****************************************************************************/
 /* $Id$ */
@@ -16,6 +16,9 @@
 			return $this->username;
 		}
 		
+		/**
+		 * @return Administrator
+		**/
 		public function setUsername($username)
 		{
 			$this->username = $username;
@@ -28,6 +31,9 @@
 			return $this->password;
 		}
 		
+		/**
+		 * @return Administrator
+		**/
 		public function setPassword($password)
 		{
 			$this->password = $password;
