@@ -1,12 +1,12 @@
 <?php
 /*****************************************************************************
- *   Copyright (C) 2006, onPHP's MetaConfiguration Builder.                  *
- *   Generated by onPHP-0.8.0.99 at 2006-10-25 13:27:45                      *
+ *   Copyright (C) 2006-2007, onPHP's MetaConfiguration Builder.             *
+ *   Generated by onPHP-0.9.42 at 2007-01-06 02:29:45                        *
  *   This file is autogenerated - do not edit.                               *
  *****************************************************************************/
 /* $Id$ */
 
-	abstract class AutoAdministratorDAO extends StorableDAO
+	abstract class AutoAdministratorDAO extends ComplexBuilderDAO
 	{
 		protected $mapping = array(
 			'id' => null,
@@ -14,21 +14,24 @@
 			'password' => null
 		);
 		
-		public function getTable()
+		public static function getTable()
 		{
 			return 'administrator';
 		}
 		
-		public function getObjectName()
+		public static function getObjectName()
 		{
 			return 'Administrator';
 		}
 		
-		public function getSequence()
+		public static function getSequence()
 		{
 			return 'administrator_id';
 		}
 		
+		/**
+		 * @return InsertOrUpdateQuery
+		**/
 		public function setQueryFields(InsertOrUpdateQuery $query, Administrator $administrator)
 		{
 			return
@@ -38,13 +41,13 @@
 					set('password', $administrator->getPassword());
 		}
 		
-		public function makeObject(&$array, $prefix = null)
+		/**
+		 * @return Administrator
+		**/
+		protected function makeSelf(&$array, $prefix = null)
 		{
-			return $this->fillObject(new Administrator(), $array, $prefix);
-		}
-		
-		protected function fillObject(/* Administrator */ $administrator, &$array, $prefix = null)
-		{
+			$administrator = new Administrator();
+			
 			$administrator->
 				setId($array[$prefix.'id'])->
 				setUsername($array[$prefix.'username'])->
