@@ -1,15 +1,34 @@
 <?php
 /*****************************************************************************
- *   Copyright (C) 2006, onPHP's MetaConfiguration Builder.                  *
- *   Generated by onPHP-0.8.0.99 at 2006-10-25 13:27:45                      *
+ *   Copyright (C) 2006-2007, onPHP's MetaConfiguration Builder.             *
+ *   Generated by onPHP-0.9.42 at 2007-01-06 02:29:45                        *
  *   This file is autogenerated - do not edit.                               *
  *****************************************************************************/
 /* $Id$ */
 
 	final class ProtoAdministrator extends AbstractProtoClass
 	{
+		/**
+		 * @return MetaClass
+		**/
+		public function getPropertyList()
+		{
+			static $list = null;
+			
+			if (!$list) {
+				$list['id'] = LightMetaProperty::make('id', 'id', 'id_id', null, true, false, null);
+				$list['username'] = LightMetaProperty::make('username', 'username', null, null, true, false, null);
+				$list['password'] = LightMetaProperty::make('password', 'password', null, null, true, false, null);
+			}
+			
+			return $list;
+		}
+		
 		public function makeForm()
 		{
+			/**
+			 * @return Form
+			**/
 			return
 				Form::create()->
 				add(
